--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/translate": "^8.0.2",
     "axios": "^1.5.0",
     "natural": "^6.7.1",
     "puppeteer": "^21.1.1",
